[package]
name = "challenge_nats"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
env_logger = "0.11.5"
toml = "0.8.19"
tokio = { version = "1.41.0", features = ["full"] }
serde = { version = "1.0.213", features = ["derive"] }
config = "0.14.1"
thiserror = "1.0.65"

[dev-dependencies]
test-case = "3.3.1"